--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,4 +3,4 @@ server:
 girl:
   cupSize: B
   age: 18
-#content: "cupSize: ${cupSize}, age: ${age}"
+                                            ##content: "cupSize: ${cupSize}, age: ${age}"
