--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!--下面这个依赖可以解决@Entity-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!--下面这个依赖解决mysql连接-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
